--- a/readme
+++ b/readme
@@ -1,6 +1,6 @@
 NYU Undergraduate Course on Modeling and Simulation Research:
 https://modelingsimulation.github.io/undergraduateClass/ 
 
-prof.Peskins' lecture notes: 
+prof.Peskin's lecture notes: 
 used and taught in class 
 https://www.math.nyu.edu/~peskin/modsim_lecture_notes/index.html
