--- a/readme
+++ b/readme
@@ -1,6 +1,8 @@
 NYU Undergraduate Course on Modeling and Simulation Research:
 https://modelingsimulation.github.io/undergraduateClass/ 
 
+![image](https://github.com/ml5376/Dij_traffic_simulation/blob/main/demo1.gif)
+
 prof.Peskin's lecture notes: 
 used and taught in class 
 https://www.math.nyu.edu/~peskin/modsim_lecture_notes/index.html
